--- a/css/style.css
+++ b/css/style.css
@@ -20,10 +20,31 @@ h1 {
   text-shadow: 3px 3px 5px #272727;
 }
 
+h2 {
+  color: white;
+  font-family: "Raleway", serif;
+  font-size: 2em;
+  text-shadow: 3px 3px 5px #272727;
+}
+
+h3 {
+  color: white;
+  font-family: "Raleway", serif;
+  font-size: 1.6em;
+  text-shadow: 3px 3px 5px #272727;
+}
+
 p {
   color:white;
   font-family: 'Lato', sans-serif;
   font-size: 1.2em;
+  line-height: 1.4em;
+}
+
+li {
+  color:white;
+  font-family: 'Lato', sans-serif;
+  font-size: 1.1em;
   line-height: 1.4em;
 }
 
